made changes to db

--- a/PyQt/pyqt_ui/bed_dataview.ui
+++ b/PyQt/pyqt_ui/bed_dataview.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1180</width>
+    <width>922</width>
     <height>1080</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <string notr="true">background-color: rgb(1,0,1);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="2" colspan="2">
+   <item row="0" column="2">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -30,7 +30,7 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="4">
+   <item row="0" column="3" colspan="2">
     <widget class="QPushButton" name="LoadData">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -44,7 +44,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="5" colspan="2">
+   <item row="0" column="5">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -57,7 +57,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="0" column="7">
+   <item row="0" column="6">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -96,7 +96,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="3" colspan="3">
+   <item row="1" column="2" colspan="4">
     <widget class="QLineEdit" name="TimeLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -104,7 +104,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="7">
+   <item row="1" column="6">
     <spacer name="horizontalSpacer_22">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -143,7 +143,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="3" colspan="3">
+   <item row="2" column="2" colspan="4">
     <widget class="QLineEdit" name="StudyIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -154,7 +154,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="7">
+   <item row="2" column="6">
     <spacer name="horizontalSpacer_28">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -193,7 +193,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="3" colspan="3">
+   <item row="3" column="2" colspan="4">
     <widget class="QLineEdit" name="StepsLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -201,7 +201,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="7">
+   <item row="3" column="6">
     <spacer name="horizontalSpacer_9">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -240,7 +240,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="3" colspan="3">
+   <item row="4" column="2" colspan="4">
     <widget class="QLineEdit" name="HeartRateLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -248,7 +248,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="7">
+   <item row="4" column="6">
     <spacer name="horizontalSpacer_8">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -287,7 +287,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="3" colspan="3">
+   <item row="5" column="2" colspan="4">
     <widget class="QLineEdit" name="IDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -295,7 +295,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="7">
+   <item row="5" column="6">
     <spacer name="horizontalSpacer_11">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -321,7 +321,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="6" column="1" colspan="2">
+   <item row="6" column="1">
     <widget class="QLabel" name="label_4">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -334,7 +334,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="3" colspan="3">
+   <item row="6" column="2" colspan="4">
     <widget class="QLineEdit" name="ActivityTimeLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -342,7 +342,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="7">
+   <item row="6" column="6">
     <spacer name="horizontalSpacer_10">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -381,7 +381,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="3" colspan="3">
+   <item row="7" column="2" colspan="4">
     <widget class="QLineEdit" name="ActivityTypeLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -389,7 +389,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="7">
+   <item row="7" column="6">
     <spacer name="horizontalSpacer_15">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -415,7 +415,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="8" column="1" colspan="2">
+   <item row="8" column="1">
     <widget class="QLabel" name="label_7">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -428,7 +428,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="3" colspan="3">
+   <item row="8" column="2" colspan="4">
     <widget class="QLineEdit" name="PromptLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -436,7 +436,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="7">
+   <item row="8" column="6">
     <spacer name="horizontalSpacer_17">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -475,7 +475,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="3" colspan="3">
+   <item row="9" column="2" colspan="4">
     <widget class="QLineEdit" name="PainLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -483,7 +483,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="7">
+   <item row="9" column="6">
     <spacer name="horizontalSpacer_19">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -522,7 +522,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="3" colspan="3">
+   <item row="10" column="2" colspan="4">
     <widget class="QLineEdit" name="PainLevelLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -530,7 +530,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="7">
+   <item row="10" column="6">
     <spacer name="horizontalSpacer_21">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -543,7 +543,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="11" column="3">
+   <item row="11" column="2" colspan="2">
     <spacer name="horizontalSpacer_32">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -570,7 +570,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="5" colspan="2">
+   <item row="11" column="5">
     <spacer name="horizontalSpacer_31">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -583,7 +583,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="11" column="7">
+   <item row="11" column="6">
     <spacer name="horizontalSpacer_13">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -596,7 +596,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="12" column="0" colspan="8">
+   <item row="12" column="0" colspan="7">
     <widget class="QTabWidget" name="tabWidget">
      <property name="font">
       <font>
@@ -690,8 +690,14 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="13" column="3" colspan="2">
+   <item row="13" column="4" colspan="2">
     <widget class="QPushButton" name="Graph">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -704,7 +710,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="6" colspan="2">
+   <item row="13" column="6">
     <spacer name="horizontalSpacer_25">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -730,8 +736,14 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="14" column="3" colspan="2">
+   <item row="14" column="4" colspan="2">
     <widget class="QPushButton" name="SaveAsCsv">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -744,7 +756,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="14" column="6" colspan="2">
+   <item row="14" column="6">
     <spacer name="horizontalSpacer_24">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -770,8 +782,14 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="15" column="3" colspan="2">
+   <item row="15" column="4" colspan="2">
     <widget class="QPushButton" name="MainMenu">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -784,7 +802,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="15" column="6" colspan="2">
+   <item row="15" column="6">
     <spacer name="horizontalSpacer_30">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
