--- a/PyQt/pyqt_ui/bed_create_record.ui
+++ b/PyQt/pyqt_ui/bed_create_record.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1094</width>
     <height>776</height>
    </rect>
   </property>
@@ -43,7 +43,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="2">
+   <item row="0" column="2" colspan="3">
     <widget class="QLineEdit" name="FirstNameLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -54,7 +54,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="3">
+   <item row="0" column="5">
     <spacer name="horizontalSpacer_12">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -93,7 +93,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="1" column="2" colspan="3">
     <widget class="QLineEdit" name="LastNameLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -104,7 +104,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="1" column="5">
     <spacer name="horizontalSpacer_20">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -143,7 +143,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="2" column="2" colspan="3">
     <widget class="QLineEdit" name="AgeLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -180,7 +180,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="2">
+   <item row="3" column="2" colspan="3">
     <widget class="QLineEdit" name="ParticipantIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -191,7 +191,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="3">
+   <item row="3" column="5">
     <spacer name="horizontalSpacer_32">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -230,7 +230,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="2">
+   <item row="4" column="2" colspan="3">
     <widget class="QLineEdit" name="StudyIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -241,7 +241,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="3">
+   <item row="4" column="5">
     <spacer name="horizontalSpacer_34">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -280,7 +280,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="2">
+   <item row="5" column="2" colspan="3">
     <widget class="QLineEdit" name="GenderLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -291,7 +291,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="3">
+   <item row="5" column="5">
     <spacer name="horizontalSpacer_36">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -330,7 +330,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="2">
+   <item row="6" column="2" colspan="3">
     <widget class="QLineEdit" name="WeightLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -341,7 +341,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="3">
+   <item row="6" column="5">
     <spacer name="horizontalSpacer_41">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -380,7 +380,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="2">
+   <item row="7" column="2" colspan="3">
     <widget class="QLineEdit" name="HeightLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -391,7 +391,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="3">
+   <item row="7" column="5">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -430,7 +430,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="2">
+   <item row="8" column="2" colspan="3">
     <widget class="QLineEdit" name="PhoneNumberLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -441,7 +441,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="3">
+   <item row="8" column="5">
     <spacer name="horizontalSpacer_8">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -480,7 +480,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="2">
+   <item row="9" column="2" colspan="3">
     <widget class="QLineEdit" name="EmailIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -491,7 +491,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="3">
+   <item row="9" column="5">
     <spacer name="horizontalSpacer_6">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -530,7 +530,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="2">
+   <item row="10" column="2" colspan="3">
     <widget class="QLineEdit" name="AddressLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -541,7 +541,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="3">
+   <item row="10" column="5">
     <spacer name="horizontalSpacer_7">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -580,7 +580,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="2">
+   <item row="11" column="2" colspan="3">
     <widget class="QLineEdit" name="MonitoringPeriodLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -591,7 +591,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="3">
+   <item row="11" column="5">
     <spacer name="horizontalSpacer_11">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -630,7 +630,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="2">
+   <item row="12" column="2" colspan="3">
     <widget class="QLineEdit" name="TrackerModelLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -641,7 +641,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="3">
+   <item row="12" column="5">
     <spacer name="horizontalSpacer_15">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -682,7 +682,26 @@ border-radius: 15px;</string>
     </widget>
    </item>
    <item row="13" column="2">
+    <spacer name="horizontalSpacer_16">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>88</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="13" column="3">
     <widget class="QPushButton" name="MainMenu">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -695,7 +714,20 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="3">
+   <item row="13" column="4">
+    <spacer name="horizontalSpacer_17">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>88</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="13" column="5">
     <spacer name="horizontalSpacer_30">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
